syntax = "proto3";
option go_package = "pb";

message Currency {
    string code         = 1;
    uint32 divisibility = 2;
    string name         = 3;
    string currencyType = 4;
}

message CurrencyValue {
    Currency currency = 1;
    string amount     = 2;
}

message ID {
    string peerID       = 1;
    string handle       = 2;
    Pubkeys pubkeys     = 3;
    bytes sig           = 4; // secp256k1 signature covering peerID

    message Pubkeys {
        bytes identity   = 1; // IPFS public key
        bytes secp256k1  = 2; // Cryptocurrency public key
    }
}